# VCA

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  readme.rst
.github/: Build.yml
.github/workflows/: Build.yml
doc/: cli.rst  introduction.rst
docs/: Makefile  api.md  build.md  build.rst  cli.md  cli.rst  conf.py  index.md  index.rst  introduction.md  licensing_faq.md  related_publications.md
source/: CMakeLists.txt  vca.cpp  vca.def.in  vca.h  vca.pc.in  vca.rc.in  vca_config.h.in  vcacli.h
source/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h  api.cpp
source/app/: CMakeLists.txt  vca.cpp  vcacli.h
source/app/common/: common.cpp  common.h
source/app/input/: IInputFile.h  Y4MInput.cpp  YUVInput.cpp  YUVInput.h
source/app/stats/: YUViewStatsFile.cpp
source/apps/common/: common.cpp  common.h
source/apps/common/input/: IInputFile.cpp  IInputFile.h  Y4MInput.cpp  Y4MInput.h  YUVInput.cpp  YUVInput.h
source/apps/common/stats/: YUViewStatsFile.cpp  YUViewStatsFile.h
source/apps/vca/: CMakeLists.txt  vca.cpp  vcacli.h
source/apps/vcaPerformanceTest/: CMakeLists.txt  vcaPerformanceTest.cpp  vcacli.h
source/cmake/: CMakeASM_NASMInformation.cmake  version.cmake
source/common/: CMakeLists.txt  common.cpp  common.h  constants.cpp  constants.h  cpu.cpp  cpu.h  dct.cpp  lowpassdct.cpp  pixel.cpp  primitives.cpp  primitives.h  threading.cpp  threading.h  threadpool.cpp  threadpool.h  version.cpp  winxp.cpp  winxp.h
source/common/vec/: dct-sse3.cpp  dct-ssse3.cpp  vec-primitives.cpp
source/common/x86/: README.txt  asm-primitives.cpp  cpu-a.asm  dct8.h  x86inc.asm
source/encoder/: CMakeLists.txt  api.cpp  encoder.cpp  encoder.h
source/input/: input.cpp  input.h  y4m.cpp  y4m.h  yuv.cpp  yuv.h
source/lib/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  vcaColorSpace.h  vcaLib.cpp  vcaLib.h  vca_config.h.in
source/lib/analyzer/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  DCTTransform.cpp  DCTTransform.h  DCTTransforms.cpp  DCTTransforms.h  DCTTransformsNative.cpp  DCTTransformsNative.h  EnergyCalculation.cpp  EnergyCalculation.h  EntropyCalculation.cpp  EntropyCalculation.h  EntropyNative.cpp  EntropyNative.h  MultiThreadIDList.cpp  MultiThreadIDList.h  MultiThreadQueue.cpp  MultiThreadQueue.h  ProcessingFunctions.cpp  ProcessingFunctions.h  ProcessingThread.cpp  ProcessingThread.h  ShotDetection.cpp  ShotDetection.h  WeightedCoeffSum.cpp  WeightedCoeffSum.h  common.h
source/lib/analyzer/common/: EnumMapper.h  common.h
source/lib/analyzer/simd/: CMakeLists.txt  const-a.asm  cpu-a.asm  cpu.cpp  cpu.h  dct-ssse3.cpp  dct-ssse3.h  dct8.asm  dct8.h  entropy.cpp  entropy.h  noAsmImpl.cpp  noAsmImpl10bit.cpp  noAsmImpl12bit.cpp  noAsmImpl8bit.cpp  x86inc.asm  x86util.asm
source/lib/test/: CMakeLists.txt  DCTTestForwardBackwards.cpp  DCTTestImplementationsIdenticalOutput.cpp  InverseDCTNative.cpp  InverseDCTNative.h  transformTest.cpp
source/lib/test/common/: functions.cpp  functions.h
